--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,37 @@
-name: foodgram_workflow
+name: Foodgram workflow
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
+
+  workflow_dispatch:
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13.10
-        env:
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: admin
-          POSTGRES_DB: admin
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip 
-          pip install flake8 pep8-naming flake8-broken-line flake8-return
-          pip install -r backend/requirements.txt
-
-      - name: Test with flake8
-        env:
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: admin
-          POSTGRES_DB: admin
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-        run: |
-          python -m flake8 
-
-  build_and_push:
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pep8-naming flake8-broken-line flake8-return
+        pip install -r backend/requirements.txt
+    - name: Test with flake8
+      run: |
+        python -m flake8 backend
+  build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
+    needs: tests
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -63,12 +48,12 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_BACKEND }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build_and_push 
+    needs: build_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -78,13 +63,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd foodgram
-            sudo docker-compose down
-            sudo docker system prune -af
-            sudo docker-compose pull
-            sudo chmod 644 .env
-            sudo rm .env
-            sudo touch .env
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
+            sudo docker-compose stop
+            sudo docker-compose rm backend
+            rm .env
+            touch .env
             echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env  
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env 
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env 
@@ -95,26 +78,19 @@ jobs:
             sudo docker-compose up -d --build
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
-            sudo docker-compose exec -T backend python manage.py load_ingredients --path=ingredients.csv
-            sudo docker-compose exec -T backend python manage.py load_tags --path=tags.csv
+            sudo docker-compose exec -T backend python manage.py load_ingrs
+            sudo docker-compose exec -T backend python manage.py load_tags
             sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-
-  send-message:
+            
+  telegram_message:
+    name: Send telegram message
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: Send message
+      - uses: actions/checkout@master
+      - name: send custom message with message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Деплой foodgram завершен.
-
-            author: ${{ github.actor }}
-
-            message: ${{ github.event.head_commit.message }}
-
-            link: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
-
-
+          message: ${{ github.workflow }} успешно выполнен!
