--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Foodgram workflow
+name: foodgram_workflow
 
 on:
   push:
@@ -6,31 +6,31 @@ on:
   pull_request:
     branches: [ main ]
 
-  workflow_dispatch:
-
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pep8-naming flake8-broken-line flake8-return
-        pip install -r backend/requirements.txt
-    - name: Test with flake8
-      run: |
-        python -m flake8 backend
-  build_and_push_to_docker_hub:
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8 pep8-naming flake8-broken-line flake8-return
+          pip install -r backend/requirements.txt
+
+      - name: Test with flake8
+        run: |
+          python -m flake8 
+
+  build_and_push:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    needs: test
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -50,9 +50,9 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   deploy:
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs: build_and_push 
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -62,11 +62,12 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
-            sudo docker-compose stop
-            sudo docker-compose rm backend
-            rm .env
-            touch .env
+            cd foodgram
+            sudo docker-compose down
+            sudo docker system prune -af
+            sudo docker-compose pull
+            sudo rm .env
+            sudo touch .env
             echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env  
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env 
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env 
@@ -77,19 +78,24 @@ jobs:
             sudo docker-compose up -d --build
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
-            sudo docker-compose exec -T backend python manage.py load_ingrs
-            sudo docker-compose exec -T backend python manage.py load_tags
+            sudo docker-compose exec -T backend python manage.py load_ingredients --path=ingredients.csv
+            sudo docker-compose exec -T backend python manage.py load_tags --path=tags.csv
             sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-            
-  telegram_message:
-    name: Send telegram message
+
+  send-message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - uses: actions/checkout@master
-      - name: send custom message with message
+      - name: Send message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+          message: |
+            Деплой foodgram завершен.
+
+            author: ${{ github.actor }}
+
+            message: ${{ github.event.head_commit.message }}
+
+            link: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
